Testing hover fix on mobile 3.

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ button:hover{
   color: yellow;
   transform: scale(104%) ;
 }
-button:active{
+button:active, button:focus{
     box-shadow: 0;
     transform: scale(100%) ;
     color:gold;
